# SPAwn

./: .pre-commit-config.yaml  README.md  config.example.yaml  pyproject.toml  setup.py  test_json_extractor.py
.github/workflows/: code.yml  docs.yml
docs/: github_integration.md  globus_compute_flow_integration.md  globus_search_integration.md  quickstart.md
examples/: config.example.yaml  static.json.example
src/spawn/: __init__.py  cli.py  config.py  crawler.py  github.py  globus_compute.py  globus_flow.py  globus_search.py  indexer.py  metadata.py
src/spawn/cli/: __init__.py  __main__.py  cli.py  common.py  compute.py  compute_commands.py  crawl.py  crawl_commands.py  extract.py  flow.py  flow_commands.py  github.py  github_commands.py  main.py  portal_commands.py  search.py  search_commands.py
src/spawn/extractors/: __init__.py  hdf.py  image.py  json.py  metadata.py  pdf.py  python.py  tabular.py  text.py  yaml.py
src/spawn/globus/: __init__.py  globus_compute.py  globus_flow.py  globus_search.py
src/spawn/templates/: static.json.template
src/spawn/utils/: github.py
tests/: test_json_extractor.py  test_yaml_extractor.py
