[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "spawn"
version = "0.1.0"
description = "Static Portal Automatic web indexer"
readme = "README.md"
authors = [
    {name = "SPAwn Team"}
]
requires-python = ">=3.8"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
]
dependencies = [
    "pyyaml>=6.0",
    "click>=8.0.0",
    "python-dotenv>=0.19.0",
    "requests>=2.25.0",
    "jinja2>=3.0.0",
    "tqdm>=4.62.0",
    "gitpython>=3.1.0",
    "globus-sdk>=3.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=6.0.0",
    "black>=21.5b2",
    "isort>=5.9.0",
    "flake8>=3.9.0",
    "mypy>=0.812",
]
compute = [
    "globus-compute-sdk>=2.0.0",
]
flow = [
    "globus-automate-client>=0.15.0",
]
tabular = [
    "pandas>=1.3.0",
    "openpyxl>=3.0.0",
    "xlrd>=2.0.0",
    "pyexcel>=0.6.0",
]
hdf = [
    "h5py>=3.0.0",
    "numpy>=1.20.0",
]
image = [
    "pillow>=8.0.0",
]
pdf = [
    "PyPDF2>=2.0.0",
]
python = [
    # No additional dependencies required as it uses the standard library
]
all-extractors = [
    "pandas>=1.3.0",
    "openpyxl>=3.0.0",
    "xlrd>=2.0.0",
    "pyexcel>=0.6.0",
    "h5py>=3.0.0",
    "numpy>=1.20.0",
    "pillow>=8.0.0",
    "PyPDF2>=2.0.0",
]

[project.scripts]
spawn = "spawn.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]